<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Plex Butler</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="plex_server">Plex Server</string>
    <string name="name">Name</string>
    <string name="sample_section_name">TV Shows</string>
    <string name="header_icon">Header icon</string>
    <string name="title">Title</string>
    <string name="tv_show">TV Show</string>
    <string name="genre_example">Drama, Crime</string>
    <string name="year_example">2018</string>
    <string name="toggle_watched_state">Toggle watched state</string>
    <string name="sample_unwatched_count">3</string>
    <string name="episode_title" tools:ignore="PluralsCandidate">Season %1$d Episode %2$02d</string>
    <string name="year_and_rating" tools:ignore="PluralsCandidate">%1$d Rating: %2$s</string>
    <string name="aired_on">Aired on %1$s</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_scan">Scan library</string>
    <string name="menu_toggle_watched">Toggle watched</string>
    <string name="show_name">Show name</string>
    <string name="pick_server_title">Pick a Server</string>
    <string name="fix_match">Fix Match</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="year">Year</string>
    <string name="score">Score: %d</string>
    <string name="unmatch">Unmatch</string>
    <string name="unmatched_snack">Unmatched %s</string>
    <string name="summary_example">Summary</string>
    <string name="imdb">IMDB</string>
    <string name="sickrage_api_key_title">Sickrage API Key</string>
    <string name="sickrage_api_key_dialog_title">Sickrage API Key</string>
    <string name="sickrage_api_key_summary">Please enter an API key</string>
    <string name="title_activity_settings">Settings</string>
    <string name="sickrage">Sickrage</string>
    <string name="sickrage_server">sickrageServer</string>
    <string name="sickrage_port">sickragePort</string>
    <string name="sickrage_api_key">sickrageApiKey</string>
    <string name="sickrage_https_title">Sickrage HTTPS</string>
    <string name="sickrage_https_summary">Check if server is HTTPS</string>
    <string name="sickrage_port_summary">Please enter Sickrage port number</string>
    <string name="sickrage_port_title">Sickrage Port</string>
    <string name="sickrage_port_dialog_title">Enter Port Number</string>
    <string name="sickrage_server_title">Sickrage Server</string>
    <string name="sickrage_server_dialog_title">Enter Server Address</string>
    <string name="sickrage_server_summary">Please enter server address</string>
</resources>
