<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"
    android:paddingStart="@dimen/list_item_padding"
    android:paddingEnd="@dimen/list_item_padding"
    >

    <ImageView
        android:id="@+id/image"
        android:layout_width="@dimen/list_item_image_width"
        android:layout_height="@dimen/list_item_image_height"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/plex_server"
        android:src="@drawable/library_type_show"
        />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/list_item_text_margin"
        android:layout_marginTop="@dimen/list_item_text_margin"
        android:layout_toEndOf="@id/image"
        android:layout_toStartOf="@id/unwatched_count"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/title"
        android:textSize="@dimen/list_item_main_text_size"
        />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/list_item_text_margin"
        android:layout_toEndOf="@id/image"
        android:layout_toStartOf="@id/unwatched_count"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/year_example"
        />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/list_item_text_margin"
        android:layout_marginStart="@dimen/list_item_text_margin"
        android:layout_toEndOf="@id/image"
        android:layout_toStartOf="@id/unwatched_count"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/genre_example"
        />

    <ImageView
        android:id="@+id/toggle_watched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/toggle_watched_state"
        android:src="@drawable/menu_toggle_unwatched"
        />

    <TextView
        android:id="@+id/unwatched_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/toggle_watched_padding"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@id/toggle_watched"
        android:textSize="@dimen/list_item_main_text_size"
        android:textColor="@color/watched"
        android:text="@string/sample_unwatched_count"
        />

</RelativeLayout>
