<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"
    android:paddingStart="@dimen/list_item_padding"
    android:paddingEnd="0dp"
    >

    <ImageView
        android:id="@+id/thumb"
        android:layout_width="@dimen/list_item_image_width"
        android:layout_height="@dimen/list_item_image_height"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/plex_server"
        android:src="@drawable/library_type_show"
        />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/list_item_text_margin"
        android:layout_marginEnd="@dimen/list_item_text_margin"
        android:layout_marginTop="@dimen/list_item_text_margin"
        android:layout_toEndOf="@id/thumb"
        android:layout_alignParentEnd="true"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/name"
        android:textSize="@dimen/list_item_main_text_size"
        />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/list_item_text_margin"
        android:layout_marginEnd="@dimen/list_item_text_margin"
        android:layout_toEndOf="@id/thumb"
        android:layout_alignParentEnd="true"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/year_example"
        />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/list_item_text_margin"
        android:layout_marginStart="@dimen/list_item_text_margin"
        android:layout_marginEnd="@dimen/list_item_text_margin"
        android:layout_toEndOf="@id/thumb"
        android:layout_alignParentEnd="true"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/score"
        />

</RelativeLayout>
